<resources>
    <string name="app_name">Shubh Vivaah</string>
    <string name="title_wall">Wall</string>
    <string name="title_events">Events</string>
    <string name="title_camera">Camera</string>
    <string name="title_albums">Albums</string>
    <string name="title_guests">Guests</string>

    <string name="intro_description">Hello from Patnaik and Bodupalli. Let\'s party</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--Intro Activity String -->
    <string name="intro_header"> We cordially invite you to our wedding. </string>
    <string name="intro_sentence"> Save the dates and the photos,\nIn this app as everything it knows;\nAbout all the events in our wedding,\nIn which we want you to be heading.    </string>

    <!-- Login Activity Strings -->
    <string name="user_name">Name</string>
    <string name="enter_name">Enter your name</string>
    <string name="user_relation">Relation with couple</string>
    <string name="wedding_side">Which side do you belong to?</string>
    <string name="login_button">Join our wedding</string>
    <string name="relation_prompt">Relation</string>
    <string name="upload_photo">Upload</string>
    <string-array name="relations">
        <item>Friend</item>
        <item>Bride</item>
        <item>Groom</item>
        <item>Mother</item>
        <item>Father</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Cousin</item>
        <item>Sister-in-law</item>
        <item>Brother-in-law</item>
        <item>Uncle</item>
        <item>Aunt</item>
        <item>GrandParent</item>
        <item>Wedding Photographer</item>
    </string-array>


    <!-- Event Activity String -->
    <string name="event_title">Event Name</string>
    <string name="mehendi">Mehendi</string>
    <string name="pool_party">Pool party</string>
    <string name="haldi">Haldi</string>
    <string name="sangeet">Sangeet</string>
    <string name="wedding">Wedding</string>
    <string name="reception">Reception</string>
    <string name="event_time">onwards</string>
    <string name="event_address">Mayfair, Bhubaneswar</string>
    <string name="event_map">Goto Maps</string>
    <string name="event_message">Welcome to our wedding!</string>
    <string name="event_year">2019</string>
    <string name="event_month">Feb</string>
    <string name="event_date">10</string>
    <string name="event_date_text">Date</string>

    <!--Guest Activity String -->
    <string name="guest_name">Name</string>
    <string name="guest_relation">Relation</string>
    <string name="guest_search_name">Full name of the guest?</string>

</resources>
