<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_wall"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_wall"/>

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_events"/>

    <item
        android:id="@+id/navigation_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/title_camera"/>

    <item
            android:id="@+id/navigation_albums"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_albums"/>

    <item
            android:id="@+id/navigation_guests"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_guests"/>
</menu>
