<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.album.AlbumFragment" android:id="@+id/frameLayout">

    <!--Pool Party-->
    <ImageView
            android:layout_width="170dp"
            android:layout_height="145dp"
            android:src="@drawable/poolparty"
            android:id="@+id/pool_party_image"
            android:layout_marginTop="48dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pool_party_name"
            android:text="@string/pool_party"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="60dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pool_party_image"/>

    <!--Haldi-->
    <ImageView
            android:layout_width="170dp"
            android:layout_height="145dp"
            android:id="@+id/haldi_image"
            android:src="@drawable/haldi"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/pool_party_image"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.419"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/haldi_name"
            android:text="@string/haldi"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/haldi_image" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/pool_party_name"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.62"/>

    <!--Mehendi-->
    <ImageView
            android:layout_width="170dp"
            android:layout_height="145dp"
            android:id="@+id/mehendi_image"
            android:src="@drawable/mehendi" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/pool_party_name" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mehendi_name"
            android:text="@string/mehendi"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/mehendi_image" android:layout_marginStart="72dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <!--Sangeet-->
    <ImageView
            android:layout_width="170dp"
            android:layout_height="145dp"
            android:id="@+id/sangeet_image"
            android:src="@drawable/sangeet"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/haldi_name" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/mehendi_image"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.419"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sangeet_name"
            android:text="@string/sangeet"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/sangeet_image" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/mehendi_name"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.674"/>

    <!--Wedding-->
    <ImageView
            android:layout_width="170dp"
            android:layout_height="145dp"
            android:id="@+id/wedding_image"
            android:src="@drawable/wedding" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/mehendi_name" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wedding_name"
            android:text="@string/wedding"
            android:textSize="20sp"
            android:textStyle="bold" android:layout_marginStart="68dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wedding_image" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>

    <!--Reception-->
    <ImageView
            android:layout_width="170dp"
            android:layout_height="145dp"
            android:id="@+id/reception_image"
            android:src="@drawable/reception"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/sangeet_name" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/wedding_image"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.419"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reception_name"
            android:text="@string/reception"
            android:textSize="20sp"
            android:textStyle="bold" android:layout_marginEnd="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reception_image"
            app:layout_constraintStart_toEndOf="@+id/wedding_name" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>




</android.support.constraint.ConstraintLayout>