<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/event_item"
            android:layout_width="wrap_content"
            android:padding="2dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            card_view:cardElevation="10dp"
            card_view:cardCornerRadius="10dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/event_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_title"
                    android:layout_marginTop="12dp"
                    android:textColor="#EA5C46"
                    android:textStyle="italic"
                    android:textSize="20sp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    card_view:layout_constraintHorizontal_bias="0.0"/>

            <ImageView
                    android:layout_width="248dp"
                    android:layout_height="150dp"
                    android:id="@+id/event_image"
                    android:src="@drawable/placeholder"
                    android:layout_marginTop="8dp"
                    android:background="#EA5C46"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="20dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/event_header"
                    card_view:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>

            <LinearLayout
                    android:layout_width="79dp"
                    android:layout_height="150dp"
                    android:orientation="vertical"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/event_header"
                    card_view:layout_constraintStart_toEndOf="@+id/event_image" android:layout_marginStart="8dp"
                    android:id="@+id/linearLayout2">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/event_year"
                        android:hint="@string/event_year"
                        android:textSize="20sp"
                        android:layout_weight="0.25"
                        android:textAlignment="center"
                        android:background="@android:color/darker_gray"
                        android:textColor="#000000"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/event_month"
                        android:hint="@string/event_month"
                        android:textSize="22sp"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:background="@android:color/darker_gray"
                        android:layout_weight="0.25"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/event_date"
                        android:hint="@string/event_date"
                        android:textSize="24sp"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:background="@android:color/darker_gray"
                        android:layout_weight="0.25"/>

                <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/event_date_text"
                        android:src="@drawable/alarm"
                        android:textAlignment="center"
                        android:textColor="#66000000"
                        android:layout_weight="0.25"/>

            </LinearLayout>
            <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:src="@drawable/event_time"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/event_image"
                    card_view:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    card_view:layout_constraintBottom_toTopOf="@+id/line_separator_1"
                    card_view:layout_constraintVertical_bias="0.0"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_time"
                    android:hint="--:--"
                    card_view:layout_constraintStart_toEndOf="@+id/time_icon" android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp" card_view:layout_constraintTop_toBottomOf="@+id/event_image"
            />

            <View
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:id="@+id/separator"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/event_image"
                    card_view:layout_constraintBottom_toTopOf="@+id/line_separator_1"
                    card_view:layout_constraintVertical_bias="0.0"
                    card_view:layout_constraintStart_toEndOf="@+id/event_time"
                    android:layout_marginStart="12dp"/>


            <ImageView
                    android:id="@+id/food_icon"
                    android:layout_width="wrap_content"
                    android:src="@drawable/event_food"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/event_image"
                    card_view:layout_constraintBottom_toTopOf="@+id/line_separator_1"
                    card_view:layout_constraintVertical_bias="0.166"
                    card_view:layout_constraintStart_toEndOf="@+id/separator"
                    android:layout_marginStart="8dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_food"
                    android:hint="--:--"
                    card_view:layout_constraintStart_toEndOf="@+id/food_icon"
                    android:layout_marginStart="12dp"
                    card_view:layout_constraintBottom_toTopOf="@+id/line_separator_1"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" card_view:layout_constraintHorizontal_bias="0.007"
                    android:layout_marginTop="8dp" card_view:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>

            <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:id="@+id/line_separator_1"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/event_time"
                    card_view:layout_constraintStart_toStartOf="parent" card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"/>

            <ImageView
                    android:id="@+id/address_icon"
                    android:layout_width="wrap_content"
                    android:src="@drawable/event_address"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/line_separator_1"
                    card_view:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    card_view:layout_constraintBottom_toTopOf="@+id/line_separator_2"
                    card_view:layout_constraintVertical_bias="0.0"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_address"
                    android:hint="@string/event_address"
                    android:layout_marginTop="12dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/line_separator_1"
                    card_view:layout_constraintStart_toEndOf="@+id/address_icon" android:layout_marginStart="12dp"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="15dp"
                    card_view:layout_constraintHorizontal_bias="0.0"/>

            <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:id="@+id/line_separator_2"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/event_address"
                    card_view:layout_constraintStart_toStartOf="parent" card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>

            <ImageView
                    android:id="@+id/map_icon"
                    android:layout_width="wrap_content"
                    android:src="@drawable/event_location_map"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/line_separator_2"
                    card_view:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    card_view:layout_constraintBottom_toTopOf="@+id/line_separator_3"
                    card_view:layout_constraintVertical_bias="0.0"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_location_map"
                    android:hint="@string/event_map"
                    android:layout_marginTop="12dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/line_separator_2"
                    card_view:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    card_view:layout_constraintStart_toEndOf="@+id/map_icon" android:layout_marginStart="8dp"
                    card_view:layout_constraintHorizontal_bias="0.015"/>

            <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:id="@+id/line_separator_3"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/event_location_map"
                    card_view:layout_constraintStart_toStartOf="parent" card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>

            <TextView
                    android:layout_width="329dp"
                    android:layout_height="37dp"
                    android:id="@+id/event_message"
                    android:hint="@string/event_message"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/line_separator_3"
                    card_view:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    card_view:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp" card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.502"
                    card_view:layout_constraintVertical_bias="0.0"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>